// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`time period stats > processJob > processes a daily and weekly job 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1730073599999,
              "sendWeeklySummary": true,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1730073599999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "message": "🗓️ On <strong>2024-10-27</strong>, we had:
📊 <strong>$4,000.00</strong> in total volume
🌐 <strong>$3,000.00</strong> of network fees
🤑 <strong>$2,000.00</strong> of LP fees
⚡️ <strong>$5,000.00</strong> of boost fees
🔥 <strong>1000.00</strong> FLIP burned",
          "platform": "telegram",
          "validationData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "🗓️ On **2024-10-27**, we had:
📊 **$4,000.00** in total volume
🌐 **$3,000.00** of network fees
🤑 **$2,000.00** of LP fees
⚡️ **$5,000.00** of boost fees
🔥 **1000.00** FLIP burned",
          "platform": "discord",
          "validationData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in:
🥇 $1,000.00 <a href="https://scan.chainflip.io/lps/cf1234567890"><strong>cf12…7890</strong></a> (50.00%)
",
          "platform": "telegram",
          "validationData": {
            "name": "DAILY_LP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in:
🥇 $1,000.00 [**cf12…7890**](https://scan.chainflip.io/lps/cf1234567890) (50.00%)
",
          "platform": "discord",
          "validationData": {
            "name": "DAILY_LP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "🗓️ For the week ending <strong>2024-10-27</strong>, we had:
📊 <strong>$28,000.00</strong> in total volume
🌐 <strong>$21,000.00</strong> of network fees
🤑 <strong>$14,000.00</strong> of LP fees
⚡️ <strong>$5,000.00</strong> of boost fees
🔥 <strong>7000.00</strong> FLIP burned",
          "platform": "telegram",
          "validationData": {
            "name": "WEEKLY_SWAP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "🗓️ For the week ending **2024-10-27**, we had:
📊 **$28,000.00** in total volume
🌐 **$21,000.00** of network fees
🤑 **$14,000.00** of LP fees
⚡️ **$5,000.00** of boost fees
🔥 **7000.00** FLIP burned",
          "platform": "discord",
          "validationData": {
            "name": "WEEKLY_SWAP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in:
🥇 $2,000.00 <a href="https://scan.chainflip.io/lps/cf1234567890"><strong>ChainflipGod</strong></a> (49.00%)
🥈 $2,000.00 <a href="https://scan.chainflip.io/lps/cf0987654321"><strong>cf09…4321</strong></a> (49.00%)
",
          "platform": "telegram",
          "validationData": {
            "name": "WEEKLY_LP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in:
🥇 $2,000.00 [**ChainflipGod**](https://scan.chainflip.io/lps/cf1234567890) (49.00%)
🥈 $2,000.00 [**cf09…4321**](https://scan.chainflip.io/lps/cf0987654321) (49.00%)
",
          "platform": "discord",
          "validationData": {
            "name": "WEEKLY_LP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;

exports[`time period stats > processJob > processes a daily job 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1729900799999,
              "sendWeeklySummary": false,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1729900799999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "message": "🗓️ On <strong>2024-10-25</strong>, we had:
📊 <strong>$4,000.00</strong> in total volume
🌐 <strong>$3,000.00</strong> of network fees
🤑 <strong>$2,000.00</strong> of LP fees
⚡️ <strong>$5,000.00</strong> of boost fees
🔥 <strong>1000.00</strong> FLIP burned",
          "platform": "telegram",
          "validationData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "🗓️ On **2024-10-25**, we had:
📊 **$4,000.00** in total volume
🌐 **$3,000.00** of network fees
🤑 **$2,000.00** of LP fees
⚡️ **$5,000.00** of boost fees
🔥 **1000.00** FLIP burned",
          "platform": "discord",
          "validationData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in:
🥇 $1,000.00 <a href="https://scan.chainflip.io/lps/cFMboYsd4HvERKXX11LyvZXuTcQzV7KAe9ipP4La5vUs8fd4e"><strong>ChainflipGod</strong></a> (50.00%)
",
          "platform": "telegram",
          "validationData": {
            "name": "DAILY_LP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in:
🥇 $1,000.00 [**ChainflipGod**](https://scan.chainflip.io/lps/cFMboYsd4HvERKXX11LyvZXuTcQzV7KAe9ipP4La5vUs8fd4e) (50.00%)
",
          "platform": "discord",
          "validationData": {
            "name": "DAILY_LP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;

exports[`time period stats > processJob > processes a daily job without a flip burn or boost fees 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1729900799999,
              "sendWeeklySummary": false,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1729900799999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "message": "🗓️ On <strong>2024-10-25</strong>, we had:
📊 <strong>$4,000.00</strong> in total volume
🌐 <strong>$3,000.00</strong> of network fees
🤑 <strong>$2,000.00</strong> of LP fees",
          "platform": "telegram",
          "validationData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "🗓️ On **2024-10-25**, we had:
📊 **$4,000.00** in total volume
🌐 **$3,000.00** of network fees
🤑 **$2,000.00** of LP fees",
          "platform": "discord",
          "validationData": {
            "name": "DAILY_SWAP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in:
",
          "platform": "telegram",
          "validationData": {
            "name": "DAILY_LP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in:
",
          "platform": "discord",
          "validationData": {
            "name": "DAILY_LP_SUMMARY",
          },
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;
